test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/simple_glob_import/src/lib_1.sw
library;

use ::items_1::Items1_Struct;

use ::items_1::Items1_Enum;

use ::items_1::Items1_Variants::X;
use ::items_1::Items1_Variants::Y;

use ::items_1::ITEMS_1_FUNCTION_RES;

use ::items_1::items_1_function;

use ::items_1::Items1Trait;
